# pfec

./: .gitignore  README.md  Setup.txt  auth-server.cabal  client-proxy.cabal  jwt-min.cabal  jwt.cabal  messages.json  run-all.sh  site_key.txt  temp_messages.json  users.json
auth-server/: auth-server.cabal  model.json  run-server.sh
auth-server/resources/: devel.cfg
auth-server/resources/ssl/: cert.pem  privkey.pem
auth-server/snaplets/sqlite-simple/: devel.cfg
auth-server/src/: Application.hs  BusinessLogic.hs  Site.hs  Test.hs
auth-server/src/Messages/: RespAuth.hs  RqAuth.hs
auth-server/src/Util/: Base64.hs  Messages.hs
client-proxy/: client-proxy.cabal
client-proxy/resources/: client-db.sqlite  devel.cfg
client-proxy/src/: Application.hs  Site.hs
data/keys/: sen_key.pub
data/keys/ecc/: sen_key.pub
database/: dbidt.sqlite
facade-server/: facade-server.cabal  model.json  run-server.sh
facade-server/json/: modelContract.json  modelService.json  modelToken.json  views.js
facade-server/resources/: devel.cfg
facade-server/resources/ssl/: cert.pem  cmds.txt  privkey.pem
facade-server/snaplets/sqlite-simple/: devel.cfg
facade-server/src/: Application.hs  BusinessLogic.hs  Db.hs  Site.hs  Test.hs
facade-server/src/Messages/: RespFacade.hs  RqFacade.hs
haskell-services/: haskell-services.cabal  run-services.sh
haskell-services/src/: Application.hs  Site.hs
jwt-min/: .gitignore  jwt-min.cabal  rsa.priv  rsa.pub
jwt-min/data/keys/ecc/: rec_key.priv  rec_key.pub  sen_key.priv
jwt-min/data/keys/rsa/: rec_key.priv  rec_key.pub  sen_key.priv  sen_key.pub
jwt-min/src/: Base64.hs  JWE.hs  JWS.hs  JWT.hs  Model.hs  Types.hs  Util.hs  data.json
rest-client/: rest-client.cabal  run-client.sh
rest-client/resources/: contract.json  devel.cfg  rsa-key.priv
rest-client/src/: Application.hs  Brubles.hs  BusinessLogic.hs  Main.hs  Site.hs
rest-client/src/Messages/: RespFacade.hs  RqFacade.hs
server-common/: server-common.cabal
server-common/resources/database/: couchdb-views.txt  server-database.sql  server-database.sqlite
server-common/src/: Db.hs  Main.hs
server-common/src/CouchDB/: DBChallenge.hs  DBCommon.hs  DBContract.hs  DBService.hs  DBTest.hs  DBToken.hs
server-common/src/Messages/: HttpResponse.hs  Types.hs
server-common/src/Model/: Challenge.hs  Contract.hs  Credential.hs  Model.hs  PublicKey.hs  Service.hs  Token.hs  URI.hs  UUID.hs  User.hs
server-common/src/Util/: Base64.hs  HttpResponse.hs  JSONWebToken.hs  Typeclasses.hs
snaplets/sqlite-simple/: devel.cfg
src/: Base64.hs  Client.hs  Db.hs  JWE.hs  JWS.hs  JWT.hs  Main.hs  Messages.hs  Model.hs  Site.hs  Util.hs  data.json
src/Messages/: RespAuth.hs  RespFacade.hs  RqAuth.hs  RqFacade.hs  Types.hs
src/MySnaplets/: MyAuth.hs
